added screenshots for steps

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -288,6 +288,21 @@ export default App;
 6 > We'll render this just to know our app is working
 ```
 ---
+export default Invert
+
+# Your app will look like this
+
+<img  src="./hour-two/EmptyTest.png" />
+
+---
+
+# How your app looks in HTML
+
+<img src="./hour-two/EmptyTestHtml.png" width="600" />
+
+All of your app renders into the "root" element
+
+---
 
 # Component Libraries
 
@@ -319,7 +334,16 @@ export default App;
 
 ---
 
-# Component API
+# Component Example Pages
+
+- Lots of examples of components
+- Live editing of all examples
+
+<img src="./hour-two/MaterialExamples.png" />
+
+---
+
+# Component API Pages
 
 <img src="./hour-two/MaterialAPI.png" />
 
@@ -370,6 +394,13 @@ export default App;
 7:14 > We've added a static list with 2 todo items
 7:14 > This is good but we need a way to render todos from data...
 ```
+---
+export default Invert
+
+# Your app with list items
+
+<img src="./hour-two/ListItems.png" width="1000" />
+
 ---
 
 # About React Hooks and State
@@ -477,7 +508,13 @@ export default App;
 ```
 
 ---
+export default Invert
 
+# Your app with add controls
+
+<img src="./hour-two/ListControls1.png" width="500" />
+
+---
 # Removing todos
 
 - Lets add a trash button for removing todos 
@@ -544,6 +581,13 @@ export default App;
 39:43 > Add a ListItemSecondaryAction using the IconButton
 ```
 
+---
+
+export default Invert
+
+# Your app with remove controls
+
+<img src="./hour-two/ListControls2.png" width="1400" />
 ---
 
 # Responsive Layout
