--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -661,6 +661,337 @@ export default Invert
 
 ---
 
+---
+
+export default Invert
+
+## Break it down
+
+<img src="./hour-two/TodoBreakdown.png" />
+
+---
+
+```javascript
+import React, { useState, useRef } from 'react';
+import TextField from '@material-ui/core/TextField';
+import Button from '@material-ui/core/Button';
+import IconButton from '@material-ui/core/IconButton';
+import DeleteIcon from '@material-ui/icons/Delete';
+import Grid from '@material-ui/core/Grid';
+import Typography from '@material-ui/core/Typography';
+import List from '@material-ui/core/List';
+import ListItem from '@material-ui/core/ListItem';
+import ListItemText from '@material-ui/core/ListItemText';
+import ListItemSecondaryAction from '@material-ui/core/ListItemSecondaryAction';
+
+function App() {
+  const textFieldRef = useRef(null);
+  const [todos, setTodos] = useState(['test1', 'test2']);
+
+  // add new todo to state and clear the input
+  function handleAddClick() {
+    const newTodo = textFieldRef.current.value;
+    if(newTodo.length > 0) {
+      setTodos([...todos, newTodo]);
+      textFieldRef.current.value = '';
+    }
+  };
+
+  // update state with deleted todo filtered out
+  function handleDeleteClick(index) {
+    setTodos(oldTodos => oldTodos.filter((e, i) => i !== index));
+  }
+
+  return (
+    <>
+      <Grid container justify="center">
+        <Grid item xs={6} md={2}>
+          <Typography variant="h3" gutterBottom>Todo List</Typography>
+        </Grid>
+      </Grid>
+      <Grid container justify="center" spacing={3}>
+        <Grid item xs={9} md={5}>
+          <TextField inputRef={textFieldRef} placeholder="new todo" fullWidth />
+        </Grid>
+        <Grid item xs={2} md={1}>
+          <Button variant="contained" color="primary" onClick={handleAddClick}>Add</Button>
+        </Grid>
+      </Grid>
+      <Grid container justify="center">
+        <Grid item xs={12} md={6}>
+          <List>
+            {todos.map((todo, index) => (
+              <ListItem key={index}>
+                <ListItemText primary={todo} />
+                <ListItemSecondaryAction>
+                  <IconButton onClick={() => handleDeleteClick(index)}>
+                    <DeleteIcon />
+                  </IconButton>
+                </ListItemSecondaryAction>
+              </ListItem>
+            ))}
+          </List>
+        </Grid>
+      </Grid>
+    </>
+  );
+}
+----
+* > 
+2,3,6 > Components we need for our new Form component
+38:45 > What we need for our Form component
+```
+
+---
+
+```javascript lib/Form.jsx
+import React from 'react';
+import TextField from '@material-ui/core/TextField';
+import Button from '@material-ui/core/Button';
+import Grid from '@material-ui/core/Grid';
+
+export default function Form(props) {
+  <Grid container justify="center" spacing={3}>
+    <Grid item xs={9} md={5}>
+      <TextField inputRef={props.inputRef} placeholder="new todo" fullWidth />
+    </Grid>
+    <Grid item xs={2} md={1}>
+      <Button variant="contained" color="primary" onClick={props.onAddClick}>Add</Button>
+    </Grid>
+  </Grid>
+}
+----
+* > 
+1:4 > Notice we did not import useRef or useState hooks
+6:15 > Form component
+9[3:9],12[9:15] > Convert functions to props
+```
+---
+
+```javascript
+import React, { useState, useRef } from 'react';
+// import TextField from '@material-ui/core/TextField';
+// import Button from '@material-ui/core/Button';
+import IconButton from '@material-ui/core/IconButton';
+import DeleteIcon from '@material-ui/icons/Delete';
+import Grid from '@material-ui/core/Grid';
+import Typography from '@material-ui/core/Typography';
+import List from '@material-ui/core/List';
+import ListItem from '@material-ui/core/ListItem';
+import ListItemText from '@material-ui/core/ListItemText';
+import ListItemSecondaryAction from '@material-ui/core/ListItemSecondaryAction';
+
+import Form from './lib/Form';
+
+function App() {
+  const textFieldRef = useRef(null);
+  const [todos, setTodos] = useState(['test1', 'test2']);
+
+  // add new todo to state and clear the input
+  function handleAddClick() {
+    const newTodo = textFieldRef.current.value;
+    if(newTodo.length > 0) {
+      setTodos([...todos, newTodo]);
+      textFieldRef.current.value = '';
+    }
+  };
+
+  // update state with deleted todo filtered out
+  function handleDeleteClick(index) {
+    setTodos(oldTodos => oldTodos.filter((e, i) => i !== index));
+  }
+
+  return (
+    <>
+      <Grid container justify="center">
+        <Grid item xs={6} md={2}>
+          <Typography variant="h3" gutterBottom>Todo List</Typography>
+        </Grid>
+      </Grid>
+      <Form inputRef={textFieldRef} onAddClick={handleAddClick} />
+      <Grid container justify="center">
+        <Grid item xs={12} md={6}>
+          <List>
+            {todos.map((todo, index) => (
+              <ListItem key={index}>
+                <ListItemText primary={todo} />
+                <ListItemSecondaryAction>
+                  <IconButton onClick={() => handleDeleteClick(index)}>
+                    <DeleteIcon />
+                  </IconButton>
+                </ListItemSecondaryAction>
+              </ListItem>
+            ))}
+          </List>
+        </Grid>
+      </Grid>
+    </>
+  );
+}
+----
+* > 
+1:11 > Remove the Text and Button
+13 > Import the new Form component
+40 > Use our Form component
+20:31 > Functionality still lives as far as possible outside
+40[6,11] > Passed as Props
+```
+---
+
+```javascript
+import React, { useState, useRef } from 'react';
+import IconButton from '@material-ui/core/IconButton';
+import DeleteIcon from '@material-ui/icons/Delete';
+import Grid from '@material-ui/core/Grid';
+import Typography from '@material-ui/core/Typography';
+import List from '@material-ui/core/List';
+import ListItem from '@material-ui/core/ListItem';
+import ListItemText from '@material-ui/core/ListItemText';
+import ListItemSecondaryAction from '@material-ui/core/ListItemSecondaryAction';
+
+import Form from './lib/Form';
+
+function App() {
+  const textFieldRef = useRef(null);
+  const [todos, setTodos] = useState(['test1', 'test2']);
+
+  // add new todo to state and clear the input
+  function handleAddClick() {
+    const newTodo = textFieldRef.current.value;
+    if(newTodo.length > 0) {
+      setTodos([...todos, newTodo]);
+      textFieldRef.current.value = '';
+    }
+  };
+
+  // update state with deleted todo filtered out
+  function handleDeleteClick(index) {
+    setTodos(oldTodos => oldTodos.filter((e, i) => i !== index));
+  }
+
+  return (
+    <>
+      <Grid container justify="center">
+        <Grid item xs={6} md={2}>
+          <Typography variant="h3" gutterBottom>Todo List</Typography>
+        </Grid>
+      </Grid>
+      <Form inputRef={textFieldRef} onAddClick={handleAddClick} />
+      <Grid container justify="center">
+        <Grid item xs={12} md={6}>
+          <List>
+            {todos.map((todo, index) => (
+              <ListItem key={index}>
+                <ListItemText primary={todo} />
+                <ListItemSecondaryAction>
+                  <IconButton onClick={() => handleDeleteClick(index)}>
+                    <DeleteIcon />
+                  </IconButton>
+                </ListItemSecondaryAction>
+              </ListItem>
+            ))}
+          </List>
+        </Grid>
+      </Grid>
+    </>
+  );
+}
+----
+* > 
+2,3,7:9 > Components we will need for our TodoItem component
+43:50 > Import the new Form component
+```
+---
+```javascript lib/TodoItem.jsx
+import React from 'react';
+import IconButton from '@material-ui/core/IconButton';
+import DeleteIcon from '@material-ui/icons/Delete';
+import ListItem from '@material-ui/core/ListItem';
+import ListItemText from '@material-ui/core/ListItemText';
+import ListItemSecondaryAction from '@material-ui/core/ListItemSecondaryAction';
+
+export default function TodoItem(props) {
+  return (
+    <ListItem>
+      <ListItemText primary={props.todo} />
+      <ListItemSecondaryAction>
+        <IconButton onClick={props.onDelete}>
+          <DeleteIcon />
+        </IconButton>
+      </ListItemSecondaryAction>
+    </ListItem>
+  );
+}
+----
+* > 
+10:17 > Notice: Key prop is not needed here
+11[5:10],13[5:11] > Props
+```
+---
+
+```javascript
+import React, { useState, useRef } from 'react';
+import Grid from '@material-ui/core/Grid';
+import Typography from '@material-ui/core/Typography';
+
+import Form from './lib/Form';
+import TodoItem from './lib/TodoItem';
+
+function App() {
+  const textFieldRef = useRef(null);
+  const [todos, setTodos] = useState(['test1', 'test2']);
+
+  // add new todo to state and clear the input
+  function handleAddClick() {
+    const newTodo = textFieldRef.current.value;
+    if(newTodo.length > 0) {
+      setTodos([...todos, newTodo]);
+      textFieldRef.current.value = '';
+    }
+  };
+
+  // update state with deleted todo filtered out
+  function handleDeleteClick(index) {
+    setTodos(oldTodos => oldTodos.filter((e, i) => i !== index));
+  }
+
+  return (
+    <>
+      <Grid container justify="center">
+        <Grid item xs={6} md={2}>
+          <Typography variant="h3" gutterBottom>Todo List</Typography>
+        </Grid>
+      </Grid>
+      <Form inputRef={textFieldRef} onAddClick={handleAddClick} />
+      <Grid container justify="center">
+        <Grid item xs={12} md={6}>
+          <List>
+            {todos.map((todo, index) => (
+              <TodoItem
+                key={index}
+                todo={todo}
+                onDelete={() => handleDeleteClick(index)}
+              />
+            ))}
+          </List>
+        </Grid>
+      </Grid>
+    </>
+  );
+}
+----
+* > 
+1:3 > Notice how much shorter our imports are
+6 > Import the new TodoItem component
+38:42 > Use our TodoItem component
+39 > Still need to set a key
+40 > Our todo item text
+41 > Keep onDelete functionality outside
+* > Shorter, more readable application code
+33, 38:42 > Custom components
+```
+---
+
 # Thank you!
 
 ---
