Moved take your app further to end of presentation and added QA

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -690,23 +690,6 @@ export default Invert
 
 ---
 
-# Take your app further
-
-- Refactoring
-  - Make TodoItem its own component
-- Ability to edit todos
-- Saving todos to a local storage
-  - save on add, remove, edit
-- Syncing todos to backend
-  - Trigger backend sync after any change to local storage
-  - Use mocks to develop without a real backend
-- Write unit tests
-  - Start [here](https://reactjs.org/docs/testing.html)
-
----
-
----
-
 export default Invert
 
 ## Break it down
@@ -1034,6 +1017,25 @@ function App() {
 * > Shorter, more readable application code
 33, 38:42 > Custom components
 ```
+---
+
+# Take your app further
+
+- Write unit tests
+  - Start [here](https://reactjs.org/docs/testing.html)
+- Ability to edit todos
+  - Store additional state for edit mode
+  - Use text field instead of ListItemText
+- Saving todos to a local storage
+  - save on add, remove, edit
+- Syncing todos to backend
+  - Trigger backend sync after any change to local storage
+  - Use mocks to develop without a real backend
+
+---
+
+# Q & A
+
 ---
 
 # Thank you!
