adjusted file names slightly

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -203,7 +203,7 @@ export default Invert
 open app.js
 ---
 
-```javascript
+```javascript src/App.js
 import React from 'react';
 import logo from './logo.svg';
 import './App.css';
@@ -771,7 +771,7 @@ function App() {
 
 ---
 
-```javascript lib/Form.jsx
+```javascript lib/Form.js
 import React from 'react';
 import TextField from '@material-ui/core/TextField';
 import Button from '@material-ui/core/Button';
@@ -929,7 +929,7 @@ function App() {
 43:50 > Import the new Form component
 ```
 ---
-```javascript lib/TodoItem.jsx
+```javascript lib/TodoItem.js
 import React from 'react';
 import IconButton from '@material-ui/core/IconButton';
 import DeleteIcon from '@material-ui/icons/Delete';
