added github repo and enzyme link

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -207,6 +207,8 @@ export default Invert
 4. Make our todo list responsive
 5. Ways to take your app further
 
+<a href="https://github.com/Disco-Pope/rapid-react-todo" target="_blank">Github</a>
+
 ---
 
 # create-react-app
@@ -1111,7 +1113,7 @@ it('renders without crashing', () => {
 # Enzyme
 
 - A react testing library by Airbnb
-- Enzyme can "shallow render" components
+- <a href="https://airbnb.io/enzyme/" target="_blank">Enzyme</a> can "shallow render" components
   - Renders your component without rendering all its chilren
   - Very fast and is sufficient for many tests
 ---
