added link to jest

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -207,8 +207,6 @@ export default Invert
 4. Make our todo list responsive
 5. Ways to take your app further
 
-<a href="https://github.com/Disco-Pope/rapid-react-todo" target="_blank">Github</a>
-
 ---
 
 # create-react-app
@@ -1070,7 +1068,7 @@ function App() {
 
 # Automated Testing
 
-- create-react-app comes with jest testing built in
+- create-react-app comes with <a href="https://jestjs.io/" target="_blank">jest</a> testing built in
 - jest will treat files with .test.js extension as test files
 - create-react-app includes a very simple test for App.js 
 - run jest using `npm test`
